# pretalx-oidc-plugin

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
.github/workflows/: style.yml
pretalx_oidc/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
pretalx_oidc_auth/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
